@startuml ERD_Module_02_Inventory_Flow
title Inventory Flow Module ERD

entity AppUser {
    * Id : int [PK]
    --
    * Username : nvarchar(100)
    * RoleCode : nvarchar(50)
    * IsActive : bit
}

entity Warehouse {
    * Id : int [PK]
    --
    * WarehouseCode : nvarchar(100) [UQ]
    * DisplayName : nvarchar(255)
    * IsDefault : bit
    * IsActive : bit
}

entity Supplier {
    * Id : int [PK]
    --
    * SupplierCode : nvarchar(100)
}

entity Customer {
    * Id : int [PK]
    --
    * CustomerCode : nvarchar(100)
}

entity Product {
    * Id : int [PK]
    --
    * ProductCode : nvarchar(100) [UQ]
    * DisplayName : nvarchar(255)
    * IsSerialTracked : bit
}

entity Unit {
    * Id : int [PK]
    --
    * UnitCode : nvarchar(100)
}

entity StockBalance {
    * Id : int [PK]
    --
    * WarehouseId : int [FK]
    * ProductId : int [FK]
    * OnHandQuantity : decimal(18,2)
    * AvailableQuantity : decimal(18,2)
    * ReservedQuantity : decimal(18,2)
    --
    *UQ_StockBalance* : UNIQUE(WarehouseId, ProductId)
}

entity StockIn {
    * Id : int [PK]
    --
    * DocumentCode : nvarchar(100) [UQ]
    SupplierId : int [FK, nullable]
    * WarehouseId : int [FK]
    * PurposeCode : nvarchar(50) [CK: Purchase, OpeningBalance, Adjustment]
    * Status : nvarchar(50)
    * CreatedBy : int [FK]
    ApprovedBy : int [FK, nullable]
    PostedBy : int [FK, nullable]
    * CreatedAt : datetime
    ApprovedAt : datetime [nullable]
    PostedAt : datetime [nullable]
}

entity StockInLine {
    * Id : int [PK]
    --
    * StockInId : int [FK]
    * ProductId : int [FK]
    * UnitId : int [FK]
    * Quantity : decimal(18,2)
    * BaseQuantity : decimal(18,2)
    * UnitPrice : decimal(18,2)
    DraftSerials : nvarchar(max)
}

entity StockOut {
    * Id : int [PK]
    --
    * DocumentCode : nvarchar(100) [UQ]
    * CustomerId : int [FK]
    * WarehouseId : int [FK]
    * PurposeCode : nvarchar(50) [CK: Sale, WarrantyReplacement, Adjustment]
    * Status : nvarchar(50)
    * CreatedBy : int [FK]
    ApprovedBy : int [FK, nullable]
    PostedBy : int [FK, nullable]
    * CreatedAt : datetime
    ApprovedAt : datetime [nullable]
    PostedAt : datetime [nullable]
}

entity StockOutLine {
    * Id : int [PK]
    --
    * StockOutId : int [FK]
    * ProductId : int [FK]
    * UnitId : int [FK]
    * Quantity : decimal(18,2)
    * BaseQuantity : decimal(18,2)
    * UnitPrice : decimal(18,2)
    DraftSerials : nvarchar(max)
}

entity StockCountSession {
    * Id : int [PK]
    --
    * SessionCode : nvarchar(100) [UQ]
    * WarehouseId : int [FK]
    * Status : nvarchar(50)
    * CreatedBy : int [FK]
    ApprovedBy : int [FK, nullable]
    PostedBy : int [FK, nullable]
    * CountDate : datetime
}

entity StockCountLine {
    * Id : int [PK]
    --
    * SessionId : int [FK]
    * ProductId : int [FK]
    * SystemQuantity : decimal(18,2)
    * CountedQuantity : decimal(18,2)
    * VarianceQuantity : decimal(18,2)
}

entity ProductSerial {
    * Id : int [PK]
    --
    * ProductId : int [FK]
    * SerialNumber : nvarchar(100) [UQ]
    * CurrentStatus : nvarchar(50)
    CurrentWarehouseId : int [FK, nullable]
}

entity StockLedger {
    * Id : int [PK]
    --
    * WarehouseId : int [FK]
    * ProductId : int [FK]
    ProductSerialId : int [FK, nullable]
    * SourceDocumentType : nvarchar(100)
    * SourceDocumentId : int
    * MovementType : nvarchar(50)
    * Quantity : decimal(18,2)
    * PostedBy : int [FK]
    * PostedAt : datetime
}

Warehouse ||--o{ StockBalance
Product ||--o{ StockBalance

Supplier |o--o{ StockIn
Warehouse ||--o{ StockIn
StockIn ||--o{ StockInLine
Product ||--o{ StockInLine
Unit ||--o{ StockInLine

Warehouse ||--o{ StockOut
Customer ||--o{ StockOut
StockOut ||--o{ StockOutLine
Product ||--o{ StockOutLine
Unit ||--o{ StockOutLine

Warehouse ||--o{ StockCountSession
StockCountSession ||--o{ StockCountLine
Product ||--o{ StockCountLine

Warehouse |o--o{ ProductSerial
Product ||--o{ ProductSerial

Warehouse ||--o{ StockLedger
Product ||--o{ StockLedger
ProductSerial |o--o{ StockLedger

AppUser ||--o{ StockIn : creator
AppUser |o--o{ StockIn : approver
AppUser |o--o{ StockIn : poster
AppUser ||--o{ StockOut : creator
AppUser |o--o{ StockOut : approver
AppUser |o--o{ StockOut : poster
AppUser ||--o{ StockLedger : poster
@enduml